deploy/flux/patches/delete-allow-egress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: astronomer-delivery-system
