deploy/flux/patches/delete-allow-scraping.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scraping
  namespace: astronomer-delivery-system
