deploy/flux/patches/delete-allow-webhooks.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhooks
  namespace: astronomer-delivery-system
